--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.1",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.11",
-    "supertest": "^7.1.4"
+    "supertest": "^7.1.4",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "eslint": "^9.39.1",
