--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^9.0.1",
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.11",
+    "resend": "^6.6.0",
     "supertest": "^7.1.4",
     "xss-clean": "^0.1.4"
   },
